# udacity-robotics-software-engineer

./: .gitignore  LICENSE  README.md
model/basic-building/: model.sdf
model/building/: model.sdf
model/my_bot/: model.config
project1/: README.md
project1/model/basic-building/: model.config
project1/model/my_bot/: model.sdf
project1/script/: hello.cpp
project1/world/: world
project2/: README.md
project2/ball_chaser/: CMakeLists.txt
project2/ball_chaser/src/: drive_bot.cpp  process_image.cpp
project2/catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
project2/catkin_ws/devel/lib/ball_chaser/: drive_bot  process_image
project2/catkin_ws/devel/lib/pkgconfig/: ball_chaser.pc  my_robot.pc
project2/catkin_ws/src/ball_chaser/: CMakeLists.txt  package.xml
project2/catkin_ws/src/ball_chaser/launch/: ball_chaser.launch
project2/catkin_ws/src/ball_chaser/src/: drive_bot.cpp  process_image.cpp
project2/catkin_ws/src/my_robot/: package.xml
project2/catkin_ws/src/my_robot/launch/: robot_description.launch  world.launch
project2/catkin_ws/src/my_robot/worlds/: gsion.world
project2/my_ball/: model.sdf
project3/: README.md
project3/catkin_wp/map/world/: gsion.world
project3/catkin_wp/src/ball_chaser/: package.xml
project3/catkin_wp/src/my_robot/: CMakeLists.txt
project3/catkin_wp/src/my_robot/launch/: amcl.launch
project3/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
project3/devel/lib/pkgconfig/: test.pc
project3/devel/share/test/cmake/: testConfig.cmake
project3/src/test/: package.xml
project4/: README.md
project4/catkin_wp/: launch.sh
project4/catkin_wp/src/my_robot/launch/: localization.launch  mapping.launch  teleop.launch
project5/: README.md
project5/catkin_wp/src/: marker_conf.rviz
project5/catkin_wp/src/scripts/: add_marker.sh  home_service.sh  launch.sh  pick_objects.sh  test_navigation.sh  test_slam.sh
(+13 files in other folders)
